--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <footer class="footer">
   <script>
-    $( "footer" ).load( "../footer.html" );
+    $( "footer" ).load( "./footer.html" );
   </script>
 </footer>
 </body>
