--- a/publication.html
+++ b/publication.html
@@ -120,7 +120,7 @@
 
   var publications = document.querySelector("#publication_list");
   //git에서 불러오기
-  var requestURL = 'https://github.com/bb0711/bb0711.github.io/blob/master/data/publications.json'; 
+  var requestURL = 'https://github.com/ANLAB-KAIST/anlab/blob/master/files/publications.json'; 
   var request = new XMLHttpRequest();
   request.open('GET', requestURL);
   request.responseType = 'json';
