--- a/publication.html
+++ b/publication.html
@@ -114,13 +114,23 @@
 </footer>
 </body>
 </html>
-
 <script>
-
-
   var publications = document.querySelector("#publication_list");
   //git에서 불러오기
-  var requestURL = 'https://github.com/ANLAB-KAIST/anlab/blob/master/files/publications.json'; 
+  var jqxhr = $.getJSON( 'https://raw.githubusercontent.com/bb0711/bb0711.github.io/blob/master/data/publications.json', function() {
+  console.log( "success" );
+})
+  .done(function() {
+    console.log( "second success" );
+  })
+  .fail(function() {
+    console.log( "error" );
+  })
+  .always(function() {
+    console.log( "complete" );
+  });
+  
+  var requestURL = './data/publications.json';//'https://github.com/ANLAB-KAIST/anlab/blob/master/files/publications.json'; 
   var request = new XMLHttpRequest();
   request.open('GET', requestURL);
   request.responseType = 'json';
