--- a/publication.html
+++ b/publication.html
@@ -117,7 +117,7 @@
 <script>
   var publications = document.querySelector("#publication_list");
   //git에서 불러오기
-  var jqxhr = $.getJSON( 'https://raw.githubusercontent.com/bb0711/bb0711.github.io/blob/master/data/publications.json', function() {
+  var jqxhr = $.getJSON( 'https://github.com/bb0711/bb0711.github.io/blob/master/data/publications.json', function() {
   console.log( "success" );
 })
   .done(function() {
