--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@
       </div>
       <div class="nav-scroller py-1 mb-1">
         <nav class="nav d-flex justify-content-between ">
-          <a class="p-4 text-secondary remove_underline" href="about.html"><b>About</b></a>
-          <a class="p-4 text-secondary remove_underline" href="#">Member</a>
-          <a class="p-4 text-secondary remove_underline" href="#">Research</a>
-          <a class="p-4 text-secondary remove_underline" href="#">Publications</a>
-          <a class="p-4 text-secondary remove_underline" href="#">Courses</a>
+          <a class="p-4 text-secondary remove_underline" href="about.html">About</a>
+          <a class="p-4 text-secondary remove_underline" href="member.html">Member</a>
+          <a class="p-4 text-secondary remove_underline" href="research.html">Research</a>
+          <a class="p-4 text-secondary remove_underline" href="publication.html"><b>Publications</b></a>
+          <a class="p-4 text-secondary remove_underline" href="courses.html">Courses</a>
         </nav>
       </div>
     </div>
