--- a/publication.html
+++ b/publication.html
@@ -114,7 +114,8 @@
 </footer>
 </body>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
   var publications = document.querySelector("#publication_list");
   //git에서 불러오기
   
