--- a/publication.html
+++ b/publication.html
@@ -119,7 +119,7 @@
   var publications = document.querySelector("#publication_list");
   //git에서 불러오기
   
-  var rawbase = 'https://raw.githubusercontent.com/';
+  var rawbase = 'https://github.com/';
   var jsonloc = 'wiheeju/data/blob/master/publications.json';
 
   $.getJSON(rawbase + jsonloc, function( data ) {
