--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="row flex-nowrap justify-content-between align-items-center">
       
       <div class="col-4 text-left">
-        <a class="blog-header-logo text-dark" href="#">ANLAB</a>
+        <a class="blog-header-logo text-dark" href="index.html">ANLAB</a>
       </div>
       <div class="nav-scroller py-1 mb-1">
         <nav class="nav d-flex justify-content-between ">
