--- a/courses.html
+++ b/courses.html
@@ -40,7 +40,11 @@
     <div class="row flex-nowrap justify-content-between align-items-center">
       
       <div class="col-4 text-left">
-        <a class="blog-header-logo text-dark" href="index.html">ANLAB</a>
+        <a class="blog-header-logo text-dark" href="index.html">
+          <div class="logo">
+            <img src="./data/anlab_logo.png" style="width: 100%; max-width: 760px; vertical-align: middle" />
+        </div>
+        </a>
       </div>
       <div class="nav-scroller py-1 mb-1">
         <nav class="nav d-flex justify-content-between ">
