--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,14 @@
-<div></div>
+
+<div class="footer_info">
+    Advanced Networking Laboratory <br>
+    Room #621 (Student Lab) / #608 (Prof. Office)<br>
+    IT Convergence Building (N1), KAIST<br>
+    Daehakro 291, Yuseong-gu, Daejeon <br>
+    305-701, Republic of Korea<br>
+    (TEL) +82-42-350-7748<br>
+</div>
+
+<div class="footer_hp_info">
+    © copyright 2020
+</div>
+  
