--- a/courses.html
+++ b/courses.html
@@ -81,11 +81,21 @@
 
 </main><!-- /.container -->
 
-<footer class="blog-footer">
-  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-  <p>
-    <a href="#">Back to top</a>
-  </p>
+<footer>
+
+  <div class="footer_info">
+    Advanced Networking Laboratory <br>
+    Room #621 (Student Lab) / #608 (Prof. Office)<br>
+    IT Convergence Building (N1), KAIST<br>
+    Daehakro 291, Yuseong-gu, Daejeon <br>
+    305-701, Republic of Korea<br>
+    (TEL) +82-42-350-7748<br>
+  </div>
+
+  <div class="footer_hp_info">
+    © copyright 2020
+  </div>
+
 </footer>
 </body>
 </html>
