--- a/member.html
+++ b/member.html
@@ -66,7 +66,7 @@
         Professor
       </h3>
     </div>
-    <div class="people">
+    <div class="people" style="width: 100%; ">
       <img src="./data/sbmoon.jpg" class=people_img">
        <!--image size: 120px 160px-->
       <div class="text">
@@ -88,29 +88,125 @@
       <img src="./data/jiwan.jpg" class=people_img">
        <!--image size: 120px 160px-->
       <div class="text">
-        <div class="name">jiwan Moon <img src="./data/hp2.png" class="hp_img"></div>
+        <div class="name">Jiwan Jeong <img src="./data/hp2.png" class="hp_img" href="http://an.kaist.ac.kr/~jiwan/"></div>
         <p class="role">Ph.D student</p>
         <p class="email">jiwan@an.kaist.ac.kr</p>
-        <p class="interest">Research Interest: ~~</p>
+        <p class="interest">Research Interest: TBD</p>
       </div>
     </div>
 
     <div class="people">
-      <img src="./data/jiwan.jpg" class=people_img"/>
+      <img src="./data/keunhong.jpg" class=people_img">
        <!--image size: 120px 160px-->
       <div class="text">
-        <div class="name">jiwan Moon <img src="./data/hp2.png" class="hp_img"></div>
+        <div class="name">Keunhong Lee<img src="./data/hp2.png" class="hp_img" href="http://an.kaist.ac.kr/~khlee/"></div>
         <p class="role">Ph.D student</p>
-        <p class="email">jiwan@an.kaist.ac.kr</p>
-        
+        <p class="email">khlee@an.kaist.ac.kr</p>
+        <p class="interest">Research Interest: TBD</p>
       </div>
     </div>
-    
+
+      <div class="people">
+      <img src="./data/wsyoon.jpg" class=people_img">
+       <!--image size: 120px 160px-->
+      <div class="text">
+        <div class="name">Wonsup Yoon<img src="./data/hp2.png" class="hp_img" href=""></div>
+        <p class="role">Ph.D student</p>
+        <p class="email">wsyoon@an.kaist.ac.kr</p>
+        <p class="interest">Research Interest: TBD</p>
+      </div>
+    </div>
+
+      <div class="people">
+      <img src="./data/jisuok.jpg" class=people_img">
+       <!--image size: 120px 160px-->
+      <div class="text">
+        <div class="name">Jisu Ok<img src="./data/hp2.png" class="hp_img" href=""></div>
+        <p class="role">Ph.D student</p>
+        <p class="email">jisu.ok@an.kaist.ac.kr</p>
+        <p class="interest">Research Interest: TBD</p>
+      </div>
+    </div>
+    <div class="people">
+      <img src="./data/jshuh.jpg" class=people_img">
+       <!--image size: 120px 160px-->
+      <div class="text">
+        <div class="name">Jisu Ok<img src="./data/hp2.png" class="hp_img" href="https://jshuh.com/"></div>
+        <p class="role">MS student</p>
+        <p class="email">jshuh@an.kaist.ac.kr</p>
+        <p class="interest">Research Interest: TBD</p>
+      </div>
+    </div>
+
+      <div class="people">
+      <img src="./data/whjcut.jpg" class=people_img">
+       <!--image size: 120px 160px-->
+      <div class="text">
+        <div class="name">Heeju Wi<img src="./data/hp2.png" class="hp_img" href=""></div>
+        <p class="role">MS student</p>
+        <p class="email">bb0711@kaist.ac.kr</p>
+        <p class="interest">Research Interest: TBD</p>
+      </div>
+    </div>
 
     <div class="line-behind"><span></span>
       <h3 class="text-left title">
         Alumni
       </h3>
+      <div class="peoplelist">
+        Hyunjin Kim, KAIST Cyber Security Research Center<br>
+        Dongyong Choi, <br>
+        Kai Lüke, Kinvolk GmbH, Germany <br>
+        Seokju Hong, Devsisters Corp., South Korea<br>
+        Joongi Kim, Lablup Inc., South Korea<br>
+        Sangwook Ma, LINE Co., South Korea<br>
+        Junhyun Shim, SAP Inc., Korea<br>
+        Changhyun Lee, National Security Research Institute, South Korea<br>
+        Kyeongmin Ryu, Tmax Soft, South Korea<br>
+        Yoonsung Hong, Tmax Soft, South Korea<br>
+        Jinyoung Jeong<br>
+        DK Lee, SK Telecom, South Korea<br>
+        DY Lee, (information unavailable)<br>
+        Haewoon Kwak, QCRI, Qatar<br>
+        Jaesun Han, FuturePlay Co., South Korea<br>
+        Jinyoung You, LG Electronics, South Korea<br>
+        Jong Gun Lee, United Nations, Indonesia<br>
+        Keon Jang, Intel, USA<br>
+        Meeyoung Cha, GSCT, KAIST, South Korea<br>
+        Mongnam Han, Republic of Korea Marine, South Korea<br>
+        Seoyeon Kang, KFTC, South Korea<br>
+        Seungjun Lee, KT Corp., South Korea<br>
+        Seungyeop Han, University of Washington, USA<br>
+        Shinae Woo, Electronical Engineering Dept, KAIST, South Korea<br>
+        Taehee Kim, HP Korea Ltd., South Korea<br>
+        Taeho Kim, Daum, South Korea<br>
+        Toan Dinh Tran, Stanford, USA<br>
+        Yoonchan Choi, Samsung Electronics, South Korea<br>
+        Hyunwoo Chun, Korea Research Institute of Standards and Science, South Korea<br>
+      </div>
+      <h3 class="text-left title">
+        Past members
+      </h3>
+      <div class="peoplelist">
+        Anna Lee, Korea Advanced Institute of Science and Technology, South Korea<br>
+        Yunkyu Sohn, UC San Diego, USA<br>
+        Jeongin Ju, Tmax Soft, South Korea<br>
+        Seunghoon Jeong, ADD, South Korea<br>
+        Eunjin Seo, KAIST, South Korea<br>
+        Fredrik Zetterman, KTH, Sweden<br>
+        Mia Zhang, Beijing Jiatong University, China<br>
+        Min Gyung Kang, ChatX Co., USA<br>
+        Nicolas Aycirieix, INSA, France<br>
+        Nicolas Larrieu, LAAS, France<br>
+        Sangman Kim, University of Texas at Austin, USA<br>
+        Sangjin Han, U.C. Berkeley, USA<br>
+        Seonggu Huh, University of Texas at Austin, USA<br>
+        Sojin Lee, Computer Science Dept, KAIST, South Korea<br>
+
+        Last updated: 2017-02-28
+        Most positions listed here are the destinations right after graduation/leaving. They may have been changed now.
+
+      </div>
     </div>
   </div>
   </div>
