--- a/publication.html
+++ b/publication.html
@@ -84,7 +84,7 @@
         </div>
         <div class="but">
           <input type="radio" id="data" value="data" name="field" />
-          <label for="data">data network</label>
+          <label for="data">online social network</label>
         </div>
       </div> 
     </div>
@@ -114,10 +114,11 @@
     </div>
     -->
 
-
+</div>
     <div class="col-sm-12 text-centerv" id="publication_list"></div>
-</div>
-</div>
+
+
+
 </main><!-- /.container -->
 
 <footer>
@@ -128,6 +129,7 @@
   </script>
 
 </footer>
+  </div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
