--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -15,26 +15,31 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
-      }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
     </style>
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
+
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Maven+Pro:wght@400;500;600;700&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+
     <!-- Custom styles for this template -->
     <link href="blog.css" rel="stylesheet">
-  </head>
+</head>
   <body>
     <div class="container">
   <header class="blog-header py-3">
@@ -62,50 +67,75 @@
   
 
 
-<main role="main" class="container">
+<main role="main" class="">
   <div class="intro">
-    <p>We seek to address fundamental rules </p>
-    <p>that govern today's Internet and</p>
-    <p>are to govern future Internet.</p>
+      <span class="index">
+          We seek to address fundamental rules that <br>
+          govern 
+          today's Internet and <br>
+          are to govern future Internet. 
+      </span>
   </div>
   <div class="first_row">
     
-    <div class= first_sec" style="text-align: center;">
-    The Advanced Networking Laboratory engages in three broadly grouped research areas.<br>
+      <div class=first_sec" style="text-align: center;">
+          The Advanced Networking Laboratory engages in two broadly grouped research areas.<br>
+          <br>
+          <b>1. Network Flatform<br></b>
+          In network flatform team, we are now focusing on research and development of the modularization of current software router framework
+          <br>and dynamically accelerated network model using coprocessor such as GPU. <br>
+          <br>
+          <b>2. Online Social Network<br></b>
+          In online social network team, we are exploring what online users do and building interaction model of users
+          <br>in online social flatform such as Twitter, online social game and news flatform. <br>
+          <br>
+          We have two major grants for those areas and other sources of funding from both the government and the industry.<br>
+          <br>
+          <br>
+          We seek to address fundamental rules that govern today's Internet and are to govern future Internet,
+          <br>if ever built, through solid experimental and theoretical research.<br>
+          We recognize the importance of collaboration due to ever-expanding reaches of computer science disciplines,
+          <br>and work actively with researchers within and outside KAIST and abroad.<br>
+          <br>
 
-    1. measurement and infrastructure building for emerging media<br>
-    2. social networking services<br>
-    3. future Internet design. <br>
-    <br>
-    
-    We seek to address fundamental rules that govern today's Internet and are to govern future Internet, if ever built, through solid experimental and theoretical research.
-We recognize the importance of collaboration due to ever-expanding reaches of computer science disciplines, and work actively with researchers within and outside KAIST and abroad. 
-We encourage PhD students to work abroad during their PhD programs. 
-In the past students from our group have worked as interns and visitors at DIMACS (Center for Discrete Mathematics and Theoretical Computer Science) , AT&T Labs, Inc. - Research , Intel Research Cambridge, Microsoft Research Cambridge , Telefonica Research - Barcelona , and SysNet group at the University of California, San Diego.
-Our group is led by Professor Sue Moon and is supported by Oksil Kim in administration. 
-We have three major grants for the three main areas listed above and other sources of funding from both the government and the industry.
-</div> 
+
+          <br>
+
+          <br>
+          We encourage PhD students to work abroad during their PhD programs. <br>
+          In the past students from our group have worked as interns and visitors at DIMACS, AT&T Labs, Inc. - Research , Intel Research Cambridge, Microsoft Research Cambridge , Telefonica Research - Barcelona , and SysNet group at the University of California, San Diego.<br>
+
+
+          <br>
+          Our group is led by Professor Sue Moon and is supported by Oksil Kim in administration.<br>
+      </div> 
   </div>
 
-  <div class="line-behind"><span></span>
-    <h3 class="text-left title">
+  <div class="line-behind" style="width:100%;"><span></span>
+    <h3 class="text-center title" style="width:100%;">
       Contact Info.
     </h3>
   </div>
 
   <div class="first_row" style="text-align: center;">
-    <b>If you are interested in our lab, please email to the prof. <u>sbmoon@kaist.edu</u></b><br>
-    <br>
-    Room #621 (Student Lab) / #608 (Prof. Office)<br>
-    IT Convergence Building (N1), KAIST<br>
-    Daehakro 291, Yuseong-gu, Daejeon <br>
-    305-701, Republic of Korea<br>
-    (TEL) +82-42-350-7748<br>
+      <p style="color: grey; font-style: italic; ">(current lab students' advice)</p>
+      We are looking for new students who are honest, outspoken and great team player.<br>
+      We did never have more than 10 students at any time and did not have set office hours. <br>
+      So, our lab would be great environment for your research if you really enjoy it !<br>
+      And all PhD graduates/candidates did overseas internships.<br>
+      <br>
+      <b>If you are interested in our lab, please email to our prof. <u>sbmoon@kaist.edu</u></b><br>
+      <br>
+      Room #621 (Student Lab) / #608 (Prof. Office)<br>
+      IT Convergence Building (N1), KAIST<br>
+      Daehakro 291, Yuseong-gu, Daejeon <br>
+      305-701, Republic of Korea<br>
+      (TEL) +82-42-350-7748<br>
   </div>
 
 <!-- * 카카오맵 - 지도퍼가기 -->
 <!-- 1. 지도 노드 -->
-<div id="daumRoughmapContainer1569494368719" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+<div id="daumRoughmapContainer1569494368719" class="root_daum_roughmap root_daum_roughmap_landing" style="margin: 20px auto;"></div>
 
 <!--
 	2. 설치 스크립트
@@ -119,7 +149,7 @@ We have three major grants for the three main areas listed above and other sourc
 		"timestamp" : "1569494368719",
 		"key" : "v78k",
 		"mapWidth" : "738",
-		"mapHeight" : "360"
+        "mapHeight": "360"
 	}).render();
 </script>
 
