--- a/courses.html
+++ b/courses.html
@@ -56,7 +56,7 @@
                           <a class="p-4 text-secondary remove_underline" href="member.html">Member</a>
                           <a class="p-4 text-secondary remove_underline" href="research.html">Research</a>
                           <a class="p-4 text-secondary remove_underline" href="publication.html">Publications</a>
-                          <a class="p-4 text-secondary remove_underline" href="courses.html"><b>Courses</b></a>
+                          <a class="p-4 text-secondary remove_underline" href="courses.html"><b>Contact</b></a>
                       </nav>
                   </div>
               </div>
@@ -67,13 +67,50 @@
 
 
           <main role="main" class="">
-              <div class="first_row">
-                  <div class="col-sm-12 text-center">
-                      courses
+              <div class="first_row" >
+                  
+                  <div class="line-behind" style="width:100%;">
+                      <span></span>
+                      <h3 class="text-center title" style="width:100%;">
+                          Contact Info.
+                      </h3>
                   </div>
-                  <div class="col-sm-12 text-center">
 
+                  <div class="first_row" style="text-align: center;">
+                      <p style="color: grey; font-style: italic; ">(current lab students' advice)</p>
+                      We are looking for new students who are honest, outspoken and great team player.<br>
+                      We did never have more than 10 students at any time and did not have set office hours. <br>
+                      So, our lab would be great environment for your research if you really enjoy it !<br>
+                      And all PhD graduates/candidates did overseas internships.<br>
+                      <br>
+                      <b>If you are interested in our lab, please email to our prof. <u>sbmoon@kaist.edu</u></b><br>
+                      <br>
+                      Room #621 (Student Lab) / #608 (Prof. Office)<br>
+                      IT Convergence Building (N1), KAIST<br>
+                      Daehakro 291, Yuseong-gu, Daejeon <br>
+                      305-701, Republic of Korea<br>
+                      (TEL) +82-42-350-7748<br>
                   </div>
+
+                  <!-- * 카카오맵 - 지도퍼가기 -->
+                  <!-- 1. 지도 노드 -->
+                  <div id="daumRoughmapContainer1569494368719" class="root_daum_roughmap root_daum_roughmap_landing" style="margin: 20px auto;"></div>
+
+                  <!--
+        2. 설치 스크립트
+        * 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
+    -->
+                  <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+
+                  <!-- 3. 실행 스크립트 -->
+                  <script charset="UTF-8">
+	new daum.roughmap.Lander({
+		"timestamp" : "1569494368719",
+		"key" : "v78k",
+		"mapWidth" : "738",
+        "mapHeight": "360"
+	}).render();
+                  </script>
 
               </div>
 
