--- a/member.html
+++ b/member.html
@@ -58,7 +58,7 @@
           <a class="p-4 text-secondary remove_underline" href="member.html"><b>Member</b></a>
           <a class="p-4 text-secondary remove_underline" href="research.html">Research</a>
           <a class="p-4 text-secondary remove_underline" href="publication.html">Publications</a>
-          <a class="p-4 text-secondary remove_underline" href="courses.html">Courses</a>
+          <a class="p-4 text-secondary remove_underline" href="courses.html">Contact</a>
         </nav>
       </div>
     </div>
