--- a/publication.html
+++ b/publication.html
@@ -60,7 +60,7 @@
                           <a class="p-4 text-secondary remove_underline" href="member.html">Member</a>
                           <a class="p-4 text-secondary remove_underline" href="research.html">Research</a>
                           <a class="p-4 text-secondary remove_underline" href="publication.html"><b>Publications</b></a>
-                          <a class="p-4 text-secondary remove_underline" href="courses.html">Courses</a>
+                          <a class="p-4 text-secondary remove_underline" href="courses.html">Contact</a>
                       </nav>
                   </div>
               </div>
