--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
                           <a class="p-4 text-secondary remove_underline" href="member.html">Member</a>
                           <a class="p-4 text-secondary remove_underline" href="research.html"><b>Research</b></a>
                           <a class="p-4 text-secondary remove_underline" href="publication.html">Publications</a>
-                          <a class="p-4 text-secondary remove_underline" href="courses.html">Courses</a>
+                          <a class="p-4 text-secondary remove_underline" href="courses.html">Contact</a>
                       </nav>
                   </div>
               </div>
