index design update

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     <link href="blog.css" rel="stylesheet">
 </head>
   <body>
-    <div class="container">
+    <div class="container_home">
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       
@@ -77,8 +77,8 @@
       </span>
   </div>
   <div class="first_row">
-    
-      <div class=first_sec" style="text-align: ;">
+
+      <div class="first_sec" style="text-align: ;">
           The Advanced Networking Laboratory engages in two broadly grouped research areas.<br>
           <br>
           <b>1. Network Flatform<br></b>
@@ -90,26 +90,37 @@
           <br>in online social flatform such as Twitter, online social game and news flatform. <br>
           <br>
           We have two major grants for those areas and other sources of funding from both the government and the industry.<br>
-          <br>
-          <br>
+
+      </div>
+      <div class="first_sec" style="text-align:; border-color: cornflowerblue;">
+
           We seek to address fundamental rules that govern today's Internet and are to govern future Internet,
           <br>if ever built, through solid experimental and theoretical research.<br>
           We recognize the importance of collaboration due to ever-expanding reaches of computer science disciplines,
           <br>and work actively with researchers within and outside KAIST and abroad.<br>
-          <br>
+
+          </div>
+      <div class="first_sec" style="        text-align:;
+        height: 320px;
+        border-color: #44ab5b;">
+
+          <div class="logogroup" style="width: 40%; float:left;">
+              <img src="./data/logogroup.png" style=" max-width: 400px; vertical-align: middle" />
+          </div>
+          <div style="width:55%; height:300px; float: left; 
+">
+              We encourage PhD students to <b>work abroad</b> during their PhD programs. <br>
+              <br />
+              In the past students from our group have worked as interns and visitors at DIMACS, AT&T Labs, Inc. - Research , Intel Research Cambridge, Microsoft Research Cambridge , Telefonica Research - Barcelona , and SysNet group at the University of California, San Diego.<br>
 
 
-          <br>
+              <br>
+          </div>
 
-          <br>
-          We encourage PhD students to work abroad during their PhD programs. <br>
-          In the past students from our group have worked as interns and visitors at DIMACS, AT&T Labs, Inc. - Research , Intel Research Cambridge, Microsoft Research Cambridge , Telefonica Research - Barcelona , and SysNet group at the University of California, San Diego.<br>
-
-
-          <br>
+      </div>
+      <div class="first_sec" style="text-align: ; width:80%; border:none;">
           Our group is led by Professor Sue Moon and is supported by Oksil Kim in administration.<br>
-      </div> 
-  </div>
+      </div>
 
 
 
